--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "base_theme",
+  "name": "brightbyte_theme",
   "version": "1.0.0",
-  "description": "Base Theme for WordPress Development",
-  "scripts": {
-    "build": "yarn buildozer build"
-  },
+  "description": "BrightByte Theme for WordPress Development",
   "author": "Matthias Claessen",
   "license": "ISC",
-  "dependencies": {
-    "buildozer": "^1.0.0"
-  },
   "devDependencies": {
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "browser-sync": "^2.29.3",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.63.4"
   }
 }
