--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Matthias Claessen",
   "license": "ISC",
   "devDependencies": {
-    "bootstrap": "^5.3.0",
     "browser-sync": "^2.29.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -13,5 +12,9 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.63.4"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0"
   }
 }
