--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "BrightByte Theme for WordPress Development",
   "author": "Matthias Claessen",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.29.3",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^5.1.0",
-    "gulp-uglify": "^3.0.2",
-    "sass": "^1.63.4"
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
-    "jquery": "^3.7.0"
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
+    "venobox": "^2.1.4",
+    "wordpress-vite-plugin": "file:../../../../../Documents/Projects/wordpress-vite-plugin"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.0.0",
+    "postcss": "^8.4.38",
+    "sass": "^1.74.1",
+    "vite": "^5.2.8"
   }
 }
